--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -241,3 +241,35 @@ $theme-colors: map-merge(
   border: 1px solid $medium-gray;
   border-radius: 0.2rem;
 }
+
+.overview-item {
+  padding: 7px 10px 7px 0;
+  border-bottom: 1px dashed $medium-gray;
+  $fontSize: 0.8rem;
+
+  &:first-child {
+    border-bottom: none;
+  }
+  &:last-child {
+    border-bottom: none;
+  }
+
+  h4 {
+    font-size: 0.875rem;
+  }
+
+  h6 {
+    color: $gray-680;
+    font-size: $fontSize;
+    font-weight: 500;
+  }
+
+  p {
+    font-size: $fontSize;
+    margin: 0;
+  }
+
+  div {
+    font-size: $fontSize;
+  }
+}
