--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -208,6 +208,10 @@ $theme-colors: map-merge(
   animation: fade-in 0.4s ease;
 }
 
+.hidden {
+  display: none;
+}
+
 @keyframes fade-in {
   0% {
     display: none;
