feat: ajouter la date de dernière mise à jour

--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -299,3 +299,10 @@ $theme-colors: map-merge(
     font-size: $fontSize;
   }
 }
+
+.update-date {
+  text-align: right;
+  font-size: 11px;
+  font-style: italic;
+  padding-right: 5px;
+}
