fix: sélectionner les champs d'une table pour faire un copier / coller
https://m2m-gitlab.by-docapost.com/powwow-ng/backlog/-/issues/1813

--- a/ui/src/theme/scss/styles.scss
+++ b/ui/src/theme/scss/styles.scss
@@ -57,6 +57,10 @@ $theme-colors: map-merge(
   user-select: none;
 }
 
+.user-select-text {
+  user-select: text;
+}
+
 .hover-pointer:hover {
   cursor: pointer;
 }
